// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TicketField /> should render coming soon for unsupported fields 1`] = `
<div>
  Coming soon
</div>
`;

exports[`<TicketField /> should render coming soon for unsupported fields 2`] = `
<div>
  Coming soon
</div>
`;

exports[`<TicketField /> should render the appropriate field 1`] = `
<div>
  <label
    class="wrapper"
  >
    <div
      class="labelWrapper"
    >
      <span
        class="label"
        title="Input field"
      >
        Input field
        :
      </span>
    </div>
    <div
      class="wrapper"
    >
      <input
        autocomplete="off"
        class="baseStyles stealth"
        id="ticket-whateva-custom-field-value-input-123"
        name="Input field"
        placeholder="Some placeholder"
        type="text"
        value="some value"
      />
    </div>
  </label>
</div>
`;

exports[`<TicketField /> should render the appropriate field 2`] = `
<div>
  <div
    class="wrapper"
  >
    <label
      class="wrapper label"
    >
      <div
        class="labelWrapper"
      >
        <span
          class="label"
          title="Dropdown field"
        >
          Dropdown field
          :
        </span>
      </div>
    </label>
    <span
      class="wrapper"
      id="ticket-whateva-custom-field-value-input-2"
    >
      <input
        autocomplete="off"
        class="baseStyles stealth"
        id="ticket-whateva-custom-field-value-input-2-input"
        name="Dropdown field"
        placeholder="+Add"
        type="text"
        value="some value"
      />
      <span
        class="hiddenInputValue"
      />
    </span>
  </div>
</div>
`;

exports[`<TicketField /> should render the appropriate field 3`] = `
<div>
  <div
    class="wrapper"
  >
    <label
      class="wrapper label"
    >
      <div
        class="labelWrapper"
      >
        <span
          class="label"
          title="Yes/No field"
        >
          Yes/No field
          :
        </span>
      </div>
    </label>
    <span
      class="wrapper"
      id="ticket-whateva-custom-field-value-input-2"
    >
      <input
        autocomplete="off"
        class="baseStyles stealth"
        id="ticket-whateva-custom-field-value-input-2-input"
        name="Yes/No field"
        placeholder="+Add"
        type="text"
        value="Yes"
      />
      <span
        class="hiddenInputValue"
      />
    </span>
  </div>
</div>
`;

exports[`<TicketField /> should render the appropriate field 4`] = `
<div>
  <label
    class="wrapper"
  >
    <div
      class="labelWrapper"
    >
      <span
        class="label"
        title="Number field"
      >
        Number field
        :
      </span>
    </div>
    <div
      class="wrapper"
    >
      <input
        autocomplete="off"
        class="baseStyles stealth"
        id="ticket-whateva-custom-field-value-number-input-123"
        max="10"
        min="1"
        name="Number field"
        placeholder="+Add"
        type="number"
        value="123"
      />
    </div>
  </label>
</div>
`;
